[gd_scene load_steps=13 format=2]

[ext_resource path="res://Main_menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Comfortaa-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Main_menu/assets/ButtonTheme.tres" type="Theme" id=3]
[ext_resource path="res://Main_menu/assets/SideButtonTheme.tres" type="Theme" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Margin_Container" type="MarginContainer" parent="Panel"]
margin_left = 360.0
margin_top = 240.0
margin_right = 1560.0
margin_bottom = 840.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Start_Menu" type="HBoxContainer" parent="Panel/Margin_Container"]
margin_right = 1200.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer3" type="CenterContainer" parent="Panel/Margin_Container/Start_Menu"]
margin_right = 340.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Margin_Container/Start_Menu"]
margin_left = 344.0
margin_right = 856.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Margin_Container/Start_Menu/VBoxContainer"]
margin_right = 512.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label_BounceBall" type="Label" parent="Panel/Margin_Container/Start_Menu/VBoxContainer/HBoxContainer"]
margin_right = 512.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Bounce Bullet"
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/Margin_Container/Start_Menu/VBoxContainer"]
margin_top = 302.0
margin_right = 512.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Margin_Container/Start_Menu/VBoxContainer/HBoxContainer2"]
margin_right = 512.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 40

[node name="Button_Start" type="Button" parent="Panel/Margin_Container/Start_Menu/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 512.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Start"

[node name="Button_Story" type="Button" parent="Panel/Margin_Container/Start_Menu/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 112.0
margin_right = 512.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Story"

[node name="Button_Quit" type="Button" parent="Panel/Margin_Container/Start_Menu/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 224.0
margin_right = 512.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Quit"

[node name="CenterContainer4" type="CenterContainer" parent="Panel/Margin_Container/Start_Menu"]
margin_left = 860.0
margin_right = 1200.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Stage_Menu" type="VBoxContainer" parent="Panel/Margin_Container"]
editor/display_folded = true
visible = false
margin_right = 1200.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 35

[node name="Stage" type="HBoxContainer" parent="Panel/Margin_Container/Stage_Menu"]
editor/display_folded = true
margin_right = 1200.0
margin_bottom = 519.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 40

[node name="CenterContainer" type="CenterContainer" parent="Panel/Margin_Container/Stage_Menu/Stage"]
margin_right = 56.0
margin_bottom = 519.0
rect_min_size = Vector2( 56, 0 )

[node name="Button_left" type="Button" parent="Panel/Margin_Container/Stage_Menu/Stage/CenterContainer"]
margin_left = 6.0
margin_top = 214.0
margin_right = 50.0
margin_bottom = 304.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "<"

[node name="GridContainer" type="GridContainer" parent="Panel/Margin_Container/Stage_Menu/Stage"]
margin_left = 96.0
margin_right = 1104.0
margin_bottom = 519.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 60
custom_constants/hseparation = 30
columns = 5

[node name="Button1" type="Button" parent="Panel/Margin_Container/Stage_Menu/Stage/GridContainer"]
margin_right = 177.0
margin_bottom = 229.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="Button2" type="Button" parent="Panel/Margin_Container/Stage_Menu/Stage/GridContainer"]
margin_left = 207.0
margin_right = 384.0
margin_bottom = 229.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="Button3" type="Button" parent="Panel/Margin_Container/Stage_Menu/Stage/GridContainer"]
margin_left = 414.0
margin_right = 591.0
margin_bottom = 229.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="Button4" type="Button" parent="Panel/Margin_Container/Stage_Menu/Stage/GridContainer"]
margin_left = 621.0
margin_right = 798.0
margin_bottom = 229.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="Button5" type="Button" parent="Panel/Margin_Container/Stage_Menu/Stage/GridContainer"]
margin_left = 828.0
margin_right = 1005.0
margin_bottom = 229.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="Button6" type="Button" parent="Panel/Margin_Container/Stage_Menu/Stage/GridContainer"]
margin_top = 289.0
margin_right = 177.0
margin_bottom = 518.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="Button7" type="Button" parent="Panel/Margin_Container/Stage_Menu/Stage/GridContainer"]
margin_left = 207.0
margin_top = 289.0
margin_right = 384.0
margin_bottom = 518.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="Button8" type="Button" parent="Panel/Margin_Container/Stage_Menu/Stage/GridContainer"]
margin_left = 414.0
margin_top = 289.0
margin_right = 591.0
margin_bottom = 518.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="Button9" type="Button" parent="Panel/Margin_Container/Stage_Menu/Stage/GridContainer"]
margin_left = 621.0
margin_top = 289.0
margin_right = 798.0
margin_bottom = 518.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="Button10" type="Button" parent="Panel/Margin_Container/Stage_Menu/Stage/GridContainer"]
margin_left = 828.0
margin_top = 289.0
margin_right = 1005.0
margin_bottom = 518.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="CenterContainer2" type="CenterContainer" parent="Panel/Margin_Container/Stage_Menu/Stage"]
margin_left = 1144.0
margin_right = 1200.0
margin_bottom = 519.0
rect_min_size = Vector2( 56, 0 )

[node name="Button_right" type="Button" parent="Panel/Margin_Container/Stage_Menu/Stage/CenterContainer2"]
margin_left = 6.0
margin_top = 214.0
margin_right = 50.0
margin_bottom = 304.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = ">"

[node name="Button_back" type="Button" parent="Panel/Margin_Container/Stage_Menu"]
margin_top = 554.0
margin_right = 1200.0
margin_bottom = 600.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Back"

[node name="Story_Menu" type="VBoxContainer" parent="Panel/Margin_Container"]
visible = false
margin_right = 1200.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/Margin_Container/Story_Menu"]
margin_right = 1200.0
margin_bottom = 550.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 8 )
bbcode_text = "When AD 2098.
In the ashes of nuclear war, humans rise to fight the machines that dominated the earth.
Machines are fighting persistently to exterminate humans, and the insurgents are fighting unavoidably with the machines.
The leader of the machines and the military computer Finima hid his main core under load.
The protagonist Astro finds out where Finima's main core is in constant search. 
Astro sneaks in there to destroy the main core.
However, when a robot finds a human, it kills at 100% accuracy.
In trouble, Astro struggles with robots in the center of the enemy…"
tab_size = 9
text = "When AD 2098.
In the ashes of nuclear war, humans rise to fight the machines that dominated the earth.
Machines are fighting persistently to exterminate humans, and the insurgents are fighting unavoidably with the machines.
The leader of the machines and the military computer Finima hid his main core under load.
The protagonist Astro finds out where Finima's main core is in constant search. 
Astro sneaks in there to destroy the main core.
However, when a robot finds a human, it kills at 100% accuracy.
In trouble, Astro struggles with robots in the center of the enemy…"

[node name="Button_back" type="Button" parent="Panel/Margin_Container/Story_Menu"]
margin_top = 554.0
margin_right = 1200.0
margin_bottom = 600.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Back"
